<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>${project.groupId}:${project.artifactId}</name>
    <url>https://github.com/jme-admin-ch/jme-cdct-segregated-provider-example/tree/main</url>

    <scm>
        <url>https://github.com/jme-admin-ch/jme-cdct-segregated-provider-example.git</url>
        <connection>scm:git:git://github.com/jme-admin-ch/jme-cdct-segregated-provider-example.git</connection>
        <developerConnection>scm:git:ssh://github.com:jme-admin-ch/jme-cdct-segregated-provider-example.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <name>BIT</name>
            <email>jeap-community@bit.admin.ch</email>
            <organization>Federal Office of Information Technology, Systems and Telecommunication FOITT</organization>
            <organizationUrl>https://www.bit.admin.ch/</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <parent>
        <groupId>ch.admin.bit.jeap</groupId>
        <artifactId>jeap-spring-boot-parent</artifactId>
        <version>30.16.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <jeap-oauth-mock-server.version>3.35.0</jeap-oauth-mock-server.version>
        <java.version>25</java.version>
        <maven.compiler.release>25</maven.compiler.release>
        <maven.javadoc.skip>false</maven.javadoc.skip>
    </properties>

    <artifactId>jme-cdct-segregated-provider-example</artifactId>
    <version>1.1.0-SNAPSHOT</version>
    <description>This example shows how to use pact tests when you have separate APIs in different modules</description>
    <packaging>pom</packaging>

    <modules>
        <module>jme-cdct-segregated-api-task</module>
        <module>jme-cdct-segregated-api-user</module>
        <module>jme-cdct-segregated-provider-service</module>
        <module>jme-cdct-segregated-auth-scs</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jme-cdct-segregated-api-task</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jme-cdct-segregated-api-user</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jme-cdct-segregated-provider-service</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Add license entry to jar manifest -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Bundle-License>https://www.apache.org/licenses/LICENSE-2.0</Bundle-License>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <!-- Allow Mockito agent with Java 25+ -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Check third-party license compliance -->
            <plugin>
                <groupId>org.honton.chas</groupId>
                <artifactId>license-maven-plugin</artifactId>
            </plugin>
            <!-- Generate third-party license list -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- This profile configures the project build to use the local Pact Broker instance -->
        <profile>
            <id>local-pact-broker</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <systemPropertyVariables>
                                <!-- Use the local Pact Broker -->
                                <pactbroker.url>http://localhost:9292</pactbroker.url>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
